--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Taras Chaikivskyi <chaikivskyi.t@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.11.0",
     "izitoast": "^1.4.0",
     "simplelightbox": "^2.14.3",
     "vite-plugin-full-reload": "^1.2.0",
